# SDLStub

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: main.cpp
source/app/: SDLApp.cpp  SDLApp.h  main.cpp
